--- a/doc/syntax_oldstyle.texi
+++ b/doc/syntax_oldstyle.texi
@@ -223,6 +223,9 @@ CPU- and output-module allow it):
 @item endstruct
       Ends a structure definition.
 
+@item endstructure
+      Ends a structure definition.
+
 @item <symbol> eq <expression>
       Equivalent to @code{<symbol> equ <expression>}.
 
@@ -427,15 +430,17 @@ CPU- and output-module allow it):
       Like @code{string}, but adds a terminating zero-byte.
 
 @item struct <name>
-      Defines a structure which can be referenced by <name>, followed by
-      optionnal arguments representing the value of the fields. 
-      The structure definition is closed by an @code{endstruct} directive.
-      The inner part of the structure contains lines encoded as follows:
-      @code{<fieldname> <type> [<value>]}.
-      Various symbols are generated.
-      The symbol <name> gives the size of the structure.
-      The symbols <name.fieldname> gives the offset of the field <fieldname>
-      in the structure.
+      Defines a structure which can be referenced by <name>. Labels within
+      a structure definitation can be used as field offsets. They will be
+      defined as local labels of @code{<name>} and can be referenced through
+      @code{<name>.<label>}. All directives are allowed, but instructions will
+      be ignored when such a structure is used. Data definitions can be used as
+      default values when the structure is used as initializer. The structure
+      name, <name>, is defined as a global symbol with the structure's size.
+      A structure definition is ended by @{endstruct}.
+
+@item structure <name>
+      Equivalent to @code{struct <name>}.
 
 @item text "string"
       Places a single string constant operands into successive bytes of
@@ -476,58 +481,19 @@ The oldstyle syntax is able to manage structures.
 Structures can be defined in two ways:
 @example 
 mylabel struct[ure]
-  <fields>
-endstruct[ure]
+        <fields>
+        endstruct[ure]
 @end example  
-       or:    
+        or:    
 @example      
-struct[ure] mylabel
-  <fields>
-endstruct[ure]
+        struct[ure] mylabel
+        <fields>
+        endstruct[ure]
 @end example  
 
-where the fields can be of the following types:
-@table @code
-@item db [<defaultvalue>]
-      Define a 1 byte field
-
-@item defb [<defaultvalue>]
-      Equivalent to @code{db [<defaultvalue>]}
-
-@item byte [<defaultvalue>]
-      Equivalent to @code{db [<defaultvalue>]}
-
-@item data [<defaultvalue>]
-      Equivalent to @code{db [<defaultvalue>]}
-
-@item dw [<defaultvalue>]
-      Define a 1 word field
-
-@item addr [<defaultvalue>]
-      Equivalent to @code{dw [<defaultvalue>]}
-
-@item defw [<defaultvalue>]
-      Equivalent to @code{dw [<defaultvalue>]}
-
-@item wor [<defaultvalue>]
-      Equivalent to @code{dw [<defaultvalue>]}
-
-@item word [<defaultvalue>]
-      Equivalent to @code{dw [<defaultvalue>]}
-
-@item ds <size>, <defaultvalue>
-      Define an array of bytes
-
-@item defs <size> [,<defaultvalue>]
-      Equivalent to @code{ds <size> [,<defaultvalue>]}
-
-@end table
-
-The default value is used when no initialisation value is given when the
-structure is defined.
-
-The default of a DS field can contain more than one expression or string,
-as long the length of the field is not exceeded.
+Any directive is allowed to define the structure fields. Labels can be used
+to define offsets into the structure. The initialized data is used as default
+value, whenever no value is given for a field when the structure is referenced.
 
 Some examples of structure declarations:
 @example
@@ -546,7 +512,7 @@ point.z  ; 2
 point    ; 3   size of the structure
 @end example
 
-The structure can be used by optionnaly redefining the fields value:
+The structure can be used by optionaly redefining the fields value:
 @example
 point1 point
 point2 point 1, 2, 3
@@ -611,8 +577,7 @@ This module has the following error messages:
 @item 1022: symbol <%s> already defined with %s scope
 @item 1023: alignment too big
 @item 1024: label <%s> had already been defined
-@item 1025: unexpected endstruct without structure
-@item 1026: bitsize of %s unknown
-@item 1027: field <%s> already defined for structure <%s>
+@item 1025: skipping instruction in struct init
+@item 1026: last %d bytes of string constant had been cut
 
 @end itemize
