--- a/vasm/history
+++ b/vasm/history
@@ -1,15 +1,23 @@
 vasm history
 =============
 
-- 1.7h (NO-RELEASE)
+- 1.7i (NO-RELEASE)
+o m68k: Support for Apollo Core 68080 and AMMX ISA.
+o madmac-syntax: Fixed .long directive (which only aligned to even bytes).
+
+- 1.7h (14.02.17)
 o Implemented a dynamic line buffer. No limitations on line lengths anymore.
 o Octal escape sequences are limited to a maximum of three digits.
 o Allow assembler text output (echo, printv) in offset sections.
 o Print a warning for initialized data in a bss-type section. This already
   worked in the past (1.2c and later), but has been lost somewhere.
+o Some single-character labels and symbols will be rejected (depending
+  on the syntax module).
 o -maxerrors=0 should print all errors in the source.
 o Print expressions in the listing file and the test output in decimal and
   hexadecimal form.
+o m68k: Immediate- and PC-relative destination addressing modes for 68851
+  PMOVE are not allowed. PMOVE ea,PCSR doesn't exist.
 o 6502: Perform zero-page optimization with a known label from an absolute
   section.
 o std-syntax: Fixed problem with parentheses in character constants.
