Update vasm from original source http://sun.hasenbraten.de/vasm/daily/vasm.tar.gz

--- a/vasm/doc/cpu_ppc.texi
+++ b/vasm/doc/cpu_ppc.texi
@@ -2,15 +2,8 @@ This chapter documents the Backend for the PowerPC microprocessor family.
 
 @section Legal
 
-    This module is written in 2002-2015 by Frank Wille.
-
-    This archive may be redistributed without modifications and used
-    for non-commercial purposes.
-
-    Distributing modified versions and commercial usage needs my written
-    consent.
-
-    Certain modules may fall under additional copyrights.
+    This module is written in 2002-2016 by Frank Wille and
+    is covered by the vasm copyright without modifications.
 
 
 @section Additional options for this module
@@ -26,7 +19,7 @@ This module provides the following additional options:
         Select little-endian mode.
 
     @item -many
-        Allow any PPC instruction.
+        Allow both, 32- and 64-bit instructions.
 
     @item -mavec, -maltivec
         Generate code for the Altivec unit.
@@ -37,7 +30,7 @@ This module provides the following additional options:
     @item -m601
         Generate code for the PPC 601.
 
-    @item -mpcc32, -mppc, -m603, -m604
+    @item -mppc32, -mppc, -m603, -m604
         Generate code for the 32-bit PowerPC 6xx family.
 
     @item -mppc64, -m620
@@ -56,7 +49,7 @@ This module provides the following additional options:
         Generate code for the AMCC 32-bit embedded 440/460 family.
 
     @item -m821, -m850, -m860
-        Generate code for the 32-but MPC8xx PowerQUICC I family.
+        Generate code for the 32-bit MPC8xx PowerQUICC I family.
 
     @item -mbooke
         Generate code for the 32-bit Book-E architecture.
@@ -78,8 +71,8 @@ This module provides the following additional options:
         Don't predefine any register-name symbols.
 
     @item -opt-branch
-        Enables 'optimization' of 16-bit branches into
-        "B<!cc> $+8 ; B label" sequences when necessary.
+        Enables translation of 16-bit branches into
+        "B<!cc> $+8 ; B label" sequences when destination is out of range.
 
     @item -sd2reg=<n>
         Sets the 2nd small data base register to @code{Rn}.
@@ -88,6 +81,8 @@ This module provides the following additional options:
         Sets small data base register to @code{Rn}.
 
 @end table
+The default setting is to generate code for a 32-bit PPC G2, G3, G4 CPU
+with Altivec support.
 
 @section General
 
@@ -95,9 +90,11 @@ This backend accepts PowerPC instructions as described in the
 instruction set manuals from IBM, Motorola, Freescale and AMCC.
 
 The full instruction set of the following families is supported:
-POWER, POWER2, 40x, 44x, 60x, 620, 750, 74xx, 860.
+POWER, POWER2, 40x, 44x, 46x, 60x, 620, 750, 74xx, 860, Book-E,
+e300 and e500.
 
-The target address type is 32bit.
+The target address type is 32 or 64 bits, depending on the selected
+CPU model.
 
 Default alignment for sections and instructions is 4 bytes. Data is
 aligned to its natural alignment by default.
@@ -145,9 +142,9 @@ This backend performs the following optimizations:
 
 @itemize @minus
 
-@item No real differantiation between 403, 750, 860 instructions
+@item No real differentiation between 403, 750, 860 instructions
       at the moment.
-@item New instructions from modern CPUs are still missing.
+@item There may still be some unsupported PPC models.
 
 @end itemize
 
