--- a/vasm/doc/syntax_oldstyle.texi
+++ b/vasm/doc/syntax_oldstyle.texi
@@ -4,15 +4,8 @@ which is available with the extension @code{oldstyle}.
 
 @section Legal
 
-    This module is copyright in 2002-2017 by Frank Wille.
-
-    This archive may be redistributed without modifications and used
-    for non-commercial purposes.
-
-    Distributing modified versions and commercial usage needs my written
-    consent.
-
-    Certain modules may fall under additional copyrights.
+    This module is written in 2002-2017 by Frank Wille and
+    is covered by the vasm copyright without modifications.
 
 @section Additional options for this version
  
@@ -62,7 +55,7 @@ Make sure that you don't define a label on the same line as a
 directive for conditional assembly (if, else, endif)! This is not supported.
 
 Some CPU backends may supported multiple statements (directives or
-mnemonics) per line, separated by a special character (e.g. @{:} for Z80).
+mnemonics) per line, separated by a special character (e.g. @code{:} for Z80).
 
 Comments are introduced by the comment character @code{;}, or the first
 blank following the operand field when option @option{-i} was given.
